fix: message-system min-height, admin notification close icon, add gaps

--- a/Magento_AdminNotification/web/css/source/_extend.less
+++ b/Magento_AdminNotification/web/css/source/_extend.less
@@ -41,6 +41,14 @@
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 0;
     }
+
+    .action-menu-item {
+        &.action-close-wrapper {
+            width: unset;
+            padding-left: @indent__base;
+            padding-right: @indent__base;
+        }
+    }
 }
 
 .message-system-list {
